--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,7 +8,8 @@ on:
     - cron: "0 */12 * * *"
   # امکان اجرای دستی از تب Actions
   workflow_dispatch:
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
